# agent-droid-bridge

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.json  smithery-manifest.json
.github/workflows/: ci.yml  publish.yml  scorecard.yml
configs/: adb_config.yaml  logging_config.yaml
docs/: configuration.md  extra-tool-packs.md  logging.md  setup.md  tools.md  troubleshooting.md  workflows.md
scripts/: release.sh
src/agent_droid_bridge/: __main__.py  adb.py  config.py  device_info.py  models.py  server.py  startup.py  ui_parser.py
src/agent_droid_bridge/configs/: adb_config.yaml  logging_config.yaml
src/agent_droid_bridge/extra_tool_packs/app_manager/: __init__.py  control_service.py  control_tools.py  models.py  package_tools.py  parsers.py  service.py  tools.py
src/agent_droid_bridge/recorder/: __init__.py  config.py  handlers.py  middleware.py  session.py  writers.py
src/agent_droid_bridge/utils/: types.py
tests/integration/: test_adb.py
tests/unit/: test_adb_filtering.py  test_app_manager_control_service.py  test_app_manager_parsers.py  test_config.py  test_device_info.py  test_recorder_config.py  test_recorder_core.py  test_recorder_io.py  test_startup.py  test_ui_parser.py
