[project]
name = "agent-droid-bridge"
version = "0.4.0"
description = "MCP server giving AI agents eyes and hands inside Android devices via ADB"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Neverlow512" }]
requires-python = ">=3.11"
keywords = [
    "mcp",
    "android",
    "adb",
    "mobile",
    "ai-agents",
    "agentic-ai",
    "model-context-protocol",
    "android-security",
    "mobile-security",
    "security-testing",
    "automation",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Emulators",
    "Topic :: Utilities",
]
dependencies = [
    "fastmcp>=3.1.0,<4.0.0",
    "pydantic>=2.0.0",
    "pyyaml",
    "python-dotenv",
]

[project.scripts]
agent-droid-bridge = "agent_droid_bridge.server:main"

[project.urls]
Homepage = "https://github.com/Neverlow512/agent-droid-bridge"
Repository = "https://github.com/Neverlow512/agent-droid-bridge"
Issues = "https://github.com/Neverlow512/agent-droid-bridge/issues"
Documentation = "https://github.com/Neverlow512/agent-droid-bridge/blob/main/docs/tools.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_droid_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
version_files = [
    "pyproject.toml:version = \"",
    "src/agent_droid_bridge/__init__.py:__version__ = \""
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_incremental = true
change_type_order = ["Features", "Bug Fixes", "Refactor", "Performance"]

[tool.commitizen.change_type_map]
feat = "Features"
fix = "Bug Fixes"
refactor = "Refactor"
perf = "Performance"
